--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -17,11 +17,11 @@ permalink: about/index.html
                 <div class="about__photo">
                     <img
                         class="responsive-image js-responsive-image"
-                        src="{{ '/assets/images/ndo-800.png' | url }}"
-                        srcset="{{ '/assets/images/ndo-800.png' | url }} 800w, 
-                        {{ '/assets/images/ndo-1600.jpg' | url }} 1600w"
+                        src="{{ '/assets/images/ndo-1601.png' | url }}"
+                        srcset="{{ '/assets/images/ndo-1601.png' | url }} 800w, 
+                        {{ '/assets/images/ndo-1601.png' | url }} 1600w"
                         sizes="(min-width: 940px) 40vw, 100vw"
-                        alt="Max Böck"
+                        alt="Nico Domino"
                     />
                 </div>
                 <div class="about__intro lead">
@@ -50,15 +50,21 @@ permalink: about/index.html
                         </p>
                     {% endfor %}
                     <p>
-                        <h4>home.newtelco.de</h4>
+                        <a href="https://home.newtelco.de">
+                          <h4>home.newtelco.de</h4>
+                        </a>
                         <img class="about-screenshot" src="/assets/images/screenshots/homenewtelco.png" alt="Screenshot home.newtelco.de"></img>
                     </p>
                     <p>
-                        <h4>youtube.ndo.dev</h4>
+                        <a href="https://youtube.ndo.dev">
+                          <h4>youtube.ndo.dev</h4>
+                        </a>
                         <img class="about-screenshot" src="/assets/images/screenshots/youtube.png" alt="Screenshot youtube.ndo.dev"></img>
                     </p>
                     <p>
-                        <h4>vacation</h4>
+                        <a href="https://vacation.newtelco.dev">
+                          <h4>vacation</h4>
+                        </a>
                         <img class="about-screenshot" src="/assets/images/screenshots/vacationnewtelco.png" alt="Screenshot vacation"></img>
                     </p>
                 </div>
