--- a/src/assets/styles/components/_hero.scss
+++ b/src/assets/styles/components/_hero.scss
@@ -88,8 +88,8 @@
             transform: scaleX(1);
         }
 
-        &--simpleloop::after {
-            background-color: $simpleloop-brand-primary;
+        &--newtelco::after {
+            background-color: $newtelco-brand-primary;
         }
         &--twitter::after {
             background-color: $twitter-brand-primary;
