--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -12,7 +12,7 @@ permalink: index.html
         <p class="hero__pretitle"><a href="/about/">Hello, my name is Nico</a></p>
 
         <div class="hero__content">
-            <p>I’m System Admin at <a href="https://newtelco.com" class="hero__link hero__link--simpleloop">Newtelco</a>, a full service Datacenter company in Frankfurt. <br class="hero__br" />
+            <p>I’m System Admin at <a href="https://newtelco.com" class="hero__link hero__link--newtelco">Newtelco</a>, a full service Datacenter company in Frankfurt. <br class="hero__br" />
             I also write about the web on my <a href="/blog" class="hero__link">Blog</a> and sometimes post things that make sense on <a href="{{ author.social.twitter.url }}" class="hero__link hero__link--twitter">Twitter</a>.</p>
         </div>
     </div>
