--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -28,14 +28,14 @@
             <a href="{{ author.social.github.url }}" title="Github" rel="me">Github</a>
         </p>
 
-        <p class="footer__item footer__item--right">
+        <!-- <p class="footer__item footer__item--right">
             <a href="{{ site.repo }}/tree/master/{{ page.inputPath }}" class="footer__icon" title="Edit this page on Github">
                 {% icon "github" %}
             </a>
             <a href="{{ "/feed.xml" | url }}" class="footer__icon" title="Atom Feed">
                 {% icon "feed" %}
             </a>
-        </p>
+        </p> -->
 
     </div>
 </footer>
