--- a/src/assets/styles/components/_about.scss
+++ b/src/assets/styles/components/_about.scss
@@ -55,13 +55,53 @@
         }
     }
 
-    .about-screenshot {
-        border: 25px solid $gray-light;
+    // .projects > img:hover {
+    //     box-shadow: 0 0 15px 2px #bfbfbf;
+    //     transform: translateY(-3px);
+    //     transition: all 300ms ease-in-out;
+    // }
+
+    .project__card {
+        border: 1px solid #ececec;
+        border-radius: 15px;
+        // box-shadow: 0 0 10px 2px #ececec;
+        padding: 20px;
+        margin: 20px 0;
     }
 
-    .projects > img:hover {
-        box-shadow: 0 0 15px 10px #bfbfbf;
-        transform: translateY(-3px);
-        transition: all 300ms ease-in-out;
+    .project__screenshot {
+        width: 100%;
+        max-width: 600px;
+        border: 25px solid $gray-light;
+        transform: scale(1.2);
+        overflow:hidden;
+        z-index: -2;
+    }
+
+    .project__label {
+        display: inline-block;
+    }
+
+    .project__label::after {
+        content: '';
+        height: 5px;
+        background-color: #eceeef;
+        background-color: var(--brand-color-primary);
+        position: absolute;
+        left: 0rem;
+        width: 100%;
+        bottom: -5px;
+        transform: scaleX(0);
+        transform-origin: 0 50%;
+        transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+    }
+
+    .project__label:hover::after {
+        transform: scaleX(1);
+    }
+
+    .project__desc {
+        font-size: 1rem;
+        color: var(--text-color-secondary);
     }
 }
