--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -8,12 +8,12 @@ permalink: index.html
 
 <div class="hero fade-in">
     <div class="hero__inner">
-        <h1 class="hero__title">I make shit on the web</h1>
+        <h1 class="hero__title">I make stuff on the web</h1>
         <p class="hero__pretitle"><a href="/about/">Hello, my name is Nico</a></p>
 
         <div class="hero__content">
-            <p>I’m a System Admininistrator at <a href="https://newtelco.com" class="hero__link hero__link--newtelco">Newtelco</a>, a full service Datacenter service company in Frankfurt, Germany. <br class="hero__br" />
-            I occasionally write about the web on my <a href="/blog" class="hero__link">Blog</a>. You can find some of my other more nonsensical ramblings on my <a href="{{ author.social.twitter.url }}" class="hero__link hero__link--twitter">Twitter</a>.</p>
+            <p>I’m a Sys Admin / Web Developer at <a href="https://newtelco.com" class="hero__link hero__link--newtelco">Newtelco</a>, a full service Datacenter management company in Frankfurt, Germany. <br class="hero__br" />
+            I occasionally write about my journey in tech on my <a href="/blog" class="hero__link">Blog</a>. You can also find some of my other less serious stuff on my <a href="{{ author.social.twitter.url }}" class="hero__link hero__link--twitter">Twitter</a>.</p>
         </div>
     </div>
 </div>
