--- a/src/assets/styles/components/_about.scss
+++ b/src/assets/styles/components/_about.scss
@@ -61,18 +61,56 @@
     //     transition: all 300ms ease-in-out;
     // }
 
+    .decorativeSquare {
+        background-color: var(--brand-color-primary);
+        position: absolute;
+        // border-radius: 15px 0 0 0;
+        top: -20px;
+        left: -20px;
+        height: 200px;
+        width: 200px;
+        z-index: -1;
+    }
+
+    .decorativeSquare2 {
+        background-color: var(--brand-color-primary);
+        position: absolute;
+        // border-radius: 0 0 15px 0;
+        bottom: -20px;
+        right: -20px;
+        height: 200px;
+        width: 200px;
+        z-index: -1;
+    }
+
     .project__card {
         border: 1px solid #ececec;
-        border-radius: 15px;
+        position: relative;
+        background: #fff;
+        // border-radius: 15px;
         // box-shadow: 0 0 10px 2px #ececec;
+        margin: 60px 0;
+    }
+
+    .project__details {
+        width: 100%;
         padding: 20px;
-        margin: 20px 0;
+        background: var(--gray-light);
+        // border-radius: 0 0 15px 15px;
+    }
+
+    .project__details:before {
+        position: absolute;
+        width: 100%;
+        height: 20px;
+        background-color: linear-gradient(to top, #ececec, rgba(0,0,0,0))
     }
 
     .project__screenshot {
         width: 100%;
+        margin: 20px;
         max-width: 600px;
-        border: 25px solid $gray-light;
+        border: 25px solid var(--gray-light);
         overflow:hidden;
         z-index: -2;
     }
