--- a/src/assets/styles/components/_about.scss
+++ b/src/assets/styles/components/_about.scss
@@ -62,7 +62,7 @@
     // }
 
     .decorativeSquare {
-        background-color: var(--brand-color-primary);
+        background-color: $brand-color-primary;
         position: absolute;
         // border-radius: 15px 0 0 0;
         top: -20px;
@@ -73,7 +73,7 @@
     }
 
     .decorativeSquare2 {
-        background-color: var(--brand-color-primary);
+        background-color: $brand-color-primary;
         position: absolute;
         // border-radius: 0 0 15px 0;
         bottom: -20px;
@@ -84,7 +84,7 @@
     }
 
     .project__card {
-        border: 1px solid #ececec;
+        border: 1px solid $gray-light;
         position: relative;
         background: #fff;
         // border-radius: 15px;
@@ -95,7 +95,7 @@
     .project__details {
         width: 100%;
         padding: 20px;
-        background: var(--gray-light);
+        background: $gray-light;
         // border-radius: 0 0 15px 15px;
     }
 
@@ -110,7 +110,7 @@
         width: 100%;
         margin: 20px;
         max-width: 600px;
-        border: 25px solid var(--gray-light);
+        border: 25px solid $gray-light;
         overflow:hidden;
         z-index: -2;
     }
@@ -123,7 +123,7 @@
         content: '';
         height: 5px;
         background-color: #eceeef;
-        background-color: var(--brand-color-primary);
+        background-color: $brand-color-primary;
         position: absolute;
         left: 0rem;
         width: 100%;
@@ -139,6 +139,6 @@
 
     .project__desc {
         font-size: 1rem;
-        color: var(--text-color-secondary);
+        color: $text-color-secondary;
     }
 }
