--- a/src/assets/styles/components/_about.scss
+++ b/src/assets/styles/components/_about.scss
@@ -29,6 +29,105 @@
         }
     }
 
+    .projects {
+        h4 {
+            font-family: monospace;
+        }
+    }
+
+    // .projects > img:hover {
+    //     box-shadow: 0 0 15px 2px #bfbfbf;
+    //     transform: translateY(-3px);
+    //     transition: all 300ms ease-in-out;
+    // }
+
+    .decorativeSquare {
+        background-color: $brand-color-primary;
+        // background-color: var(--brand-color-primary);
+        position: absolute;
+        // border-radius: 15px 0 0 0;
+        top: -20px;
+        left: -20px;
+        height: 200px;
+        width: 200px;
+        z-index: -1;
+    }
+
+    .decorativeSquare2 {
+        background-color: $brand-color-primary;
+        // background-color: var(--brand-color-primary);
+        position: absolute;
+        // border-radius: 0 0 15px 0;
+        bottom: -20px;
+        right: -20px;
+        height: 200px;
+        width: 200px;
+        z-index: -1;
+    }
+
+    .project__card {
+        border: 1px solid $gray-light;
+        // border: 1px solid var(--gray-light);
+        position: relative;
+        background: #fff;
+        // border-radius: 15px;
+        // box-shadow: 0 0 10px 2px #ececec;
+        margin: 60px 0;
+    }
+
+    .project__details {
+        width: 100%;
+        padding: 20px;
+        background: $gray-light;
+        // background: var(--gray-light);
+        // border-radius: 0 0 15px 15px;
+    }
+
+    .project__details:before {
+        position: absolute;
+        width: 100%;
+        height: 20px;
+        background-color: linear-gradient(to top, #ececec, rgba(0,0,0,0))
+    }
+
+    .project__screenshot {
+        width: 100%;
+        margin: 20px;
+        max-width: 600px;
+        border: 25px solid $gray-light;
+        // border: 25px solid var(--gray-light);
+        overflow:hidden;
+        z-index: -2;
+    }
+
+    .project__label {
+        display: inline-block;
+    }
+
+    .project__label::after {
+        content: '';
+        height: 5px;
+        background-color: $brand-color-primary;
+        // background-color: var(--brand-color-primary);
+        position: absolute;
+        left: 0rem;
+        width: 100%;
+        bottom: -5px;
+        transform: scaleX(0);
+        transform-origin: 0 50%;
+        transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+    }
+
+    .project__label:hover::after {
+        transform: scaleX(1);
+    }
+
+    .project__desc {
+        font-size: 1rem;
+        color: $text-color-secondary;
+        // color: var(--text-color-secondary);
+    }
+
     @include mq(lg) {
         &__header {
             display: flex;
@@ -48,97 +147,21 @@
             @include container-narrow;
         }
     }
-
-    .projects {
-        h4 {
-            font-family: monospace;
+    @include mq-down(md) {
+        .projects {
+            width: 90%;
+            margin: 0 auto;
         }
-    }
-
-    // .projects > img:hover {
-    //     box-shadow: 0 0 15px 2px #bfbfbf;
-    //     transform: translateY(-3px);
-    //     transition: all 300ms ease-in-out;
-    // }
-
-    .decorativeSquare {
-        background-color: $brand-color-primary;
-        position: absolute;
-        // border-radius: 15px 0 0 0;
-        top: -20px;
-        left: -20px;
-        height: 200px;
-        width: 200px;
-        z-index: -1;
-    }
-
-    .decorativeSquare2 {
-        background-color: $brand-color-primary;
-        position: absolute;
-        // border-radius: 0 0 15px 0;
-        bottom: -20px;
-        right: -20px;
-        height: 200px;
-        width: 200px;
-        z-index: -1;
-    }
-
-    .project__card {
-        border: 1px solid $gray-light;
-        position: relative;
-        background: #fff;
-        // border-radius: 15px;
-        // box-shadow: 0 0 10px 2px #ececec;
-        margin: 60px 0;
-    }
-
-    .project__details {
-        width: 100%;
-        padding: 20px;
-        background: $gray-light;
-        // border-radius: 0 0 15px 15px;
-    }
-
-    .project__details:before {
-        position: absolute;
-        width: 100%;
-        height: 20px;
-        background-color: linear-gradient(to top, #ececec, rgba(0,0,0,0))
-    }
-
-    .project__screenshot {
-        width: 100%;
-        margin: 20px;
-        max-width: 600px;
-        border: 25px solid $gray-light;
-        overflow:hidden;
-        z-index: -2;
-    }
-
-    .project__label {
-        display: inline-block;
-    }
-
-    .project__label::after {
-        content: '';
-        height: 5px;
-        background-color: #eceeef;
-        background-color: $brand-color-primary;
-        position: absolute;
-        left: 0rem;
-        width: 100%;
-        bottom: -5px;
-        transform: scaleX(0);
-        transform-origin: 0 50%;
-        transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
-    }
-
-    .project__label:hover::after {
-        transform: scaleX(1);
-    }
-
-    .project__desc {
-        font-size: 1rem;
-        color: $text-color-secondary;
+        .project__card > img {
+            width: 85%;
+        }
+        .decorativeSquare {
+            top: -10px;
+            left: -10px;
+        }
+        .decorativeSquare2 {
+            bottom: -10px;
+            right: -10px;
+        }
     }
 }
