--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -29,18 +29,18 @@ permalink: about/index.html
                     <p>
                         I've been building stuff on the web for the last 10 years, 5 professionally. 
                     </p>
-                    <p>I like creating engaging, practicle, accessible content online! </p>
+                    <p>I like creating engaging, practical, accessible content online! </p>
                 </div>
             </div>
             <div class="about__content markdown">
                 <h2>Work</h2>
                 <p>
-                    I work at <a href="https://newtelco.com">Newtelco</a>, a datacenter management company in Frankfurt 
-                    dedicated to getting your business connected to the rest of the world.
+                    I currently work at <a href="https://newtelco.com">Newtelco</a>, a datacenter management company in Frankfurt 
+                    dedicated to getting your business online and connected to the rest of the world.
                 </p>
             
+                <h2>Projects</h2>
                 <div class="projects">
-                    <h2>Projects</h2>
                     {% for project in projects %}
                     <div class="project__card">
                         <div class="decorativeSquare"></div>
