fix: posts working

--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -3,6 +3,8 @@
 <!--!
   Oh so you're an inspector?
   View the source here: {{ site.repo }}
+
+  Forked from + special thanks to: https://github.com/maxboeck/mxb
 -->
     <head>
         <meta charset="utf-8">
