--- a/src/assets/styles/components/_responsive-image.scss
+++ b/src/assets/styles/components/_responsive-image.scss
@@ -3,7 +3,7 @@
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 
     // on IE, these are divs with background-image style
     &--fallback {
