--- a/src/includes/meta.njk
+++ b/src/includes/meta.njk
@@ -14,11 +14,11 @@
 <link type="application/atom+xml" rel="alternate" href="{{ site.url }}/feed.xml" title="{{ site.title }}">
 
 {# Indie Auth #}
-<link rel="authorization_endpoint" href="https://indieauth.com/auth" />
-<link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
+{# <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
+<link rel="token_endpoint" href="https://tokens.indieauth.com/token" /> #}
 
 {# Webmentions #}
-<link rel="dns-prefetch" href="https://webmention.io">
+{# <link rel="dns-prefetch" href="https://webmention.io">
 <link rel="preconnect" href="https://webmention.io">
 <link rel="pingback" href="https://webmention.io/mxb.dev/xmlrpc">
-<link rel="webmention" href="https://webmention.io/mxb.dev/webmention">
+<link rel="webmention" href="https://webmention.io/mxb.dev/webmention"> #}
