--- a/src/assets/styles/components/_post.scss
+++ b/src/assets/styles/components/_post.scss
@@ -49,6 +49,15 @@
             font-style: italic;
         }
     }
+    ul.contains-task-list {
+        list-style: none;
+        padding-left: 0.5em;
+    }
+    .task-list-item-checkbox {
+        height: 10px;
+        width: 20px;
+        transform: scale(2);
+    }
 }
 
 .postsection {
