--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -25,18 +25,21 @@ permalink: about/index.html
                     />
                 </div>
                 <div class="about__intro lead">
-                    <p>I'm Nico Domino, a System Administrator / Full Stack Web Developer / DevOps Engineer based in Frankfurt, Germany</p>
                     <p>
-                        I've been building stuff on the web for the last 10 years, 5 professionally. 
+                        My name is Nico Domino and at work my title is 'System Administrator', but I do a lot of web development as well as DevOps type stuff. I am based here the criminally underrated city of Frankfurt am Main, Germany and I've been building stuff on the web for the last 2-3 years.
                     </p>
-                    <p>I like creating engaging, practical, accessible content online! </p>
                 </div>
             </div>
             <div class="about__content markdown">
-                <h2>Work</h2>
+                <h2>Summary</h2>
                 <p>
-                    I currently work at <a href="https://newtelco.com">Newtelco</a>, a datacenter management company in Frankfurt 
-                    dedicated to getting your business online and connected to the rest of the world.
+                    My day job responsibilities include managing customer hardware and software in the datacenter, ensuring your businesses critical infrastructure stays up and connected to the rest of the world!
+                </p>
+                <p>    
+                    In addition, I also like to make my colleagues lives easier by developing quick, slick, and easy to use web applications for various business processes. Outside of business hours, you will usually find me in front of a keyboard as well, where I like to work on open source software. 
+                </p>
+                <p> 
+                    You can find some of my most recent work below. 
                 </p>
             
                 <h2>Projects</h2>
