--- a/src/pages/blog.njk
+++ b/src/pages/blog.njk
@@ -1,8 +1,8 @@
 ---
 layout: base
 tags: nav
-title: Articles
-navtitle: Articles
+title: Blog
+navtitle: Blog
 navorder: 2
 permalink: blog/index.html
 ---
