--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -42,6 +42,11 @@ p {
 }
 
 a {
+    text-decoration: none;
+    color: $brand-color-primary;
+}
+
+a > :not(code) {
     color: $brand-color-primary;
     color: var(--brand-color-primary);
     text-decoration: none;
