--- a/src/assets/styles/components/_markdown.scss
+++ b/src/assets/styles/components/_markdown.scss
@@ -13,17 +13,27 @@
     /* In-Text Links */
     p,
     li {
-        a:not(.btn) {
-            box-shadow: inset 0 -2px 0 0 currentColor;
-            border-bottom: 1px solid currentColor;
-
+        a:not(.btn) > code {
+            box-shadow: none;
+            border-bottom-color: none;
+        
             @include hover-focus {
                 color: #fff;
-                box-shadow: inset 0 -1.25em 0 0 $brand-color-primary;
-                box-shadow: inset 0 -1.25em 0 0 var(--brand-color-primary);
-                border-bottom-color: $brand-color-primary;
-                border-bottom-color: var(--brand-color-primary);
                 outline: none;
+            }
+        }
+
+        a {
+            display: inline-block;
+            transition: transform 0.4s ease-in-out 0s;
+
+            @include hover-focus {
+                transform: translate(0, -5px);
+                outline: none;
+                // box-shadow: inset 0 -1.25em 0 0 $brand-color-primary;
+                // box-shadow: inset 0 -1.25em 0 0 var(--brand-color-primary);
+                // border-bottom-color: $brand-color-primary;
+                // border-bottom-color: var(--brand-color-primary);
             }
         }
     }
@@ -153,8 +163,7 @@
         border: 1px solid #fc6767 !important;
 
         &:hover {
-            border: 2px solid #fc6767 !important;
-            color: #fc6767 !important;
+            color: #fc6768 !important;
         }
 
         a & {
