--- a/src/assets/styles/components/_markdown.scss
+++ b/src/assets/styles/components/_markdown.scss
@@ -23,13 +23,14 @@
             }
         }
 
-        a {
+        a:not(pre) {
             display: inline-block;
-            transition: transform 0.4s ease-in-out 0s;
+            transition: all 0.1s ease-in-out 0s;
 
             @include hover-focus {
-                transform: translate(0, -5px);
+                // transform: translate(0, -5px);
                 outline: none;
+                // font-weight: 500;
                 // box-shadow: inset 0 -1.25em 0 0 $brand-color-primary;
                 // box-shadow: inset 0 -1.25em 0 0 var(--brand-color-primary);
                 // border-bottom-color: $brand-color-primary;
