--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -26,17 +26,17 @@ permalink: about/index.html
                 </div>
                 <div class="about__intro lead">
                     <p>
-                        My name is Nico Domino and at work my title is 'System Administrator', but I do a lot of web development as well as DevOps type stuff. I am based here the criminally underrated city of Frankfurt am Main, Germany and I've been building stuff on the web for the last 2-3 years.
+                        My name is Nico Domino and I am a System Administrator by day, Web Developer by night. I am based in the (underrated) city of Frankfurt am Main, Germany and I've been building stuff on the web for the past 2-3 years.
                     </p>
                 </div>
             </div>
             <div class="about__content markdown">
                 <h2>Summary</h2>
                 <p>
-                    My day job responsibilities include managing customer hardware and software in the datacenter, ensuring your businesses critical infrastructure stays up and connected to the rest of the world!
+                    My day job responsibilities include managing customer hardware and software in the datacenter, ensuring your businesses critical infrastructure stays up and connected to the rest of the world.
                 </p>
                 <p>    
-                    In addition, I also like to make my colleagues lives easier by developing quick, slick, and easy to use web applications for various business processes. Outside of business hours, you will usually find me in front of a keyboard as well, where I like to work on open source software. 
+                    In addition, I also like to make my colleagues lives easier by developing quick, slick, and easy to use web applications to automate various business processes. After dark you will usually find me in front of a keyboard as well, where I like to work on open source software. 
                 </p>
                 <p> 
                     You can find some of my most recent work below. 
