--- a/src/assets/styles/components/_markdown.scss
+++ b/src/assets/styles/components/_markdown.scss
@@ -152,7 +152,6 @@
 
         > code {
             @include container-narrow;
-            display: block;
         }
 
         @include mq(lg) {
@@ -178,10 +177,9 @@
         display: inline-block;
         font-family: $font-family-monospace;
         background-color: $bg-color-secondary;
-        background-color: var(--bg-color-secondary);
         border: 1px solid $border-color;
-        border: 1px solid var(--border-color);
         border-radius: $border-radius;
+        color: $text-color;
         padding: 2px 4px;
         margin: 0 2px;
         font-size: 75%;
