--- a/src/assets/styles/components/_post.scss
+++ b/src/assets/styles/components/_post.scss
@@ -26,13 +26,36 @@
     &__status {
         font-weight: 700;
         color: $brand-color-secondary;
-        color: var(--brand-color-secondary);
     }
     &__demo {
         margin-left: 2rem;
     }
     &__content {
         @include container-narrow;
+
+        pre {
+            background-color: $header-border-color;
+            color: $gray-lightest;
+            padding: 5vw 20vw;
+            width: 100vw;
+            transform: translateX(-31vw);
+            margin: 40px 0px;
+            font-size: 80%;
+            overflow-wrap: normal;
+            line-height: 2;
+
+            @include mq-down(md) {
+                transform: translateX(-12vw);
+            }
+
+            code {
+                display: inline-block;
+                width: 100%;
+                word-break: break-all;
+                white-space: pre-wrap;
+            }
+        }
+
     }
     &__footer {
         @include container-narrow;
@@ -45,7 +68,6 @@
         &__info {
             margin: 1rem 0;
             color: $text-color-secondary;
-            color: var(--text-color-secondary);
             font-style: italic;
         }
     }
@@ -64,7 +86,6 @@
     @include container-narrow;
     padding: 2rem 0;
     border-top: 1px solid $border-color;
-    border-top: 1px solid var(--border-color);
 
     &__title {
         @extend .smalltitle;
