--- a/src/assets/styles/base/_fonts.scss
+++ b/src/assets/styles/base/_fonts.scss
@@ -1,9 +1,6 @@
 @font-face {
-    font-family: 'Noe Display';
+    font-family: 'Alegreya Sans';
     font-style: normal;
     font-display: swap;
     font-weight: 400;
-    src: local('Noe Display'), local('NoeDisplay-Regular'),
-        url('/assets/fonts/noe-display-regular.woff2') format('woff2'),
-        url('/assets/fonts/noe-display-regular.woff') format('woff');
 }
