--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -13,6 +13,7 @@
 
         <title>{%- if title -%}{{ title }} | {{ site.title }}{%- else -%}{{ site.title }}{%- endif -%}</title>
         <link rel="preload" href="{{ '/assets/fonts/noe-display-regular.woff2' | url }}" as="font" type="font/woff2" crossorigin>
+        <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Playfair+Display&display=swap" rel="stylesheet">
 
         {% if build.env !== 'production' %}
             <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}">
