update: main.js filename in loader

--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -51,7 +51,7 @@
         </div>
 
         {# Main JS Bundle #}
-        <script src="{{ '/assets/js/main.min.js' | url }}" defer></script>
+        <script src="{{ '/assets/js/main.js' | url }}" defer></script>
 
         {# Include additional scripts on post/note pages #}
         {% if layout == 'post' or layout == 'note' %}
