--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -13,7 +13,7 @@ permalink: index.html
 
         <div class="hero__content">
             <p>I’m a Sys Admin and Web Developer at <a href="https://newtelco.com" class="hero__link hero__link--newtelco">Newtelco</a>, a full service datacenter management company in Frankfurt, Germany. <br class="hero__br" /> 
-            I occasionally write about my journey in tech on my <a href="/blog" class="hero__link">Blog</a> and you can find some of my (much less) serious stuff on <a href="{{ author.social.twitter.url }}" class="hero__link hero__link--twitter">Twitter</a>.</p>
+            <span class="hero__antibr"> </span>I occasionally write about my journey in tech on my <a href="/blog" class="hero__link">Blog</a> and you can find some of my (much less) serious stuff on <a href="{{ author.social.twitter.url }}" class="hero__link hero__link--twitter">Twitter</a>.</p>
         </div>
     </div>
 </div>
