--- a/src/assets/styles/components/_about.scss
+++ b/src/assets/styles/components/_about.scss
@@ -1,20 +1,58 @@
+html.theme-dark {
+    & .about__photo img {
+        filter: grayscale(1.0);
+    }
+}
+
 .about {
     &__header {
         margin-bottom: 2rem;
+        display: flex;
+        @include mq(sm) {
+            flex-direction: column;
+        }
+        @include mq(md) {
+            flex-direction: row;
+            max-height: 450px;
+            align-items: center;
+        }
     }
     &__photo {
         position: relative;
         display: block;
-        padding-bottom: 75%;
         margin-bottom: 2rem;
+        @include mq(sm) {
+            text-align: center;
+        }
+        @include mq(md) {
+            margin-right: 15px;
+        }
 
-        .responsive-image {
-            object-position: 0 50%;
-            background-position: left center;
+        & img {
+            position: relative;
+        }
+
+        &--border {
+            display: inline-block;
+            border: 15px solid $brand-color-primary;
+            @include mq(sm) {
+                width: 70%;
+            }
+            @include mq(md) {
+                width: 100%;
+            }
         }
     }
+
     &__intro {
         max-width: 54rem;
+
+        @include mq(md) {
+            font-size: 1.6rem;
+        }
+        @include mq(lg) {
+            font-size: 2rem;
+        }
 
         p {
             margin-bottom: 1rem;
@@ -80,7 +118,17 @@
         }
 
         &__tech {
-            max-width: 96px;
+            max-width: 64px;
+
+            @include mq(sm) {
+                max-width: 48px;
+            }
+            @include mq(md) {
+                max-width: 64px;
+            }
+            @include mq(lg) {
+                max-width: 96px;
+            }
         }
 
         &__details {
@@ -173,8 +221,9 @@
         }
         &__photo {
             width: 40%;
-            padding-bottom: 450px;
+            max-width: 500px;
             margin: 0;
+            margin-left: 15px;
         }
         &__intro {
             flex: 1 1 60%;
@@ -191,14 +240,6 @@
         }
         .project__card > img {
             width: 85%;
-        }
-        .decorativeSquare {
-            top: -10px;
-            left: -10px;
-        }
-        .decorativeSquare2 {
-            bottom: -10px;
-            right: -10px;
         }
     }
 }
