--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -16,8 +16,9 @@ permalink: about/index.html
         <div class="about">
             <div class="about__header">
                 <div class="about__photo">
-                    <img class="responsive-image js-responsive-image" src="{{ '/assets/images/ndo-1601.png' | url }}" srcset="{{ '/assets/images/ndo-801.png' | url }} 800w,
-                        {{ '/assets/images/ndo-1601.png' | url }} 1600w" sizes="(min-width: 940px) 40vw, 100vw" alt="Nico Domino"/>
+                    <div class="about__photo--border">
+                        <img class="responsive-image js-responsive-image" src="{{ '/assets/images/ndo2.jpg' | url }}" alt="Nico Domino"/>
+                    </div>
                 </div>
                 <div class="about__intro lead">
                     <p>
